--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 <body>
   <canvas id='canvas'></canvas>
   <script type="text/javascript" charset="utf-8" src="lib/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" charset="utf-8" src="lib/movingObject.js"></script>
-  <script type="text/javascript" charset="utf-8" src="lib/utils.js"></script>
-
-  <script type="text/javascript" charset="utf-8">
-    var canvas  = $('#canvas')[0];
-    canvas.width = window.innerWidth;
+  <script src="lib/utils.js" type="text/javascript"></script>
+  <script src="lib/movingObject.js" type="text/javascript"></script>
+  <script src="lib/asteroid.js" type="text/javascript"></script>
+  <script src="lib/game.js" type="text/javascript"></script>
+  <script src="lib/gameView.js" type="text/javascript"></script>
+  <script type = "text/javascript" charset = "utf-8">
+    var canvas    = $('#canvas')[0];
+    canvas.width  = window.innerWidth;
     canvas.height = window.innerHeight;
-    var c       = canvas.getContext('2d');
-    c.fillStyle = 'black';
-    c.fillRect(0,0,window.innerWidth,window.innerHeight)
+    var ctx       = canvas.getContext('2d');
+    var game      = new Asteroids.Game();
+    new Asteroids.GameView(game, ctx).start();
+    //ctx.fillStyle = 'black';
+    //ctx.fillRect(0,0,window.innerWidth,window.innerHeight)
   </script>
 </body>
 </html>
