ship is part of game

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="lib/utils.js" type="text/javascript"></script>
   <script src="lib/movingObject.js" type="text/javascript"></script>
   <script src="lib/asteroid.js" type="text/javascript"></script>
+  <script src="lib/ship.js" type="text/javascript"></script>
   <script src="lib/game.js" type="text/javascript"></script>
   <script src="lib/gameView.js" type="text/javascript"></script>
   <script type = "text/javascript" charset = "utf-8">
