--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
   <script src="lib/ship.js" type="text/javascript"></script>
   <script src="lib/game.js" type="text/javascript"></script>
   <script src="lib/gameView.js" type="text/javascript"></script>
-  <script type = "text/javascript" charset = "utf-8">
-    var canvas    = $('#canvas')[0];
-    canvas.width  = window.innerWidth;
-    canvas.height = window.innerHeight;
-    var ctx       = canvas.getContext('2d');
-    var game      = new Asteroids.Game();
-    new Asteroids.GameView(game, ctx).start();
-    //ctx.fillStyle = 'black';
+  <script>
+    $(function() {
+      var canvas    = $('#canvas')[0];
+      canvas.width  = window.innerWidth;
+      canvas.height = window.innerHeight;
+      var ctx       = canvas.getContext('2d');
+      var game      = new Asteroids.Game();
+      new Asteroids.GameView(game, ctx).start();
+    })    //ctx.fillStyle = 'black';
     //ctx.fillRect(0,0,window.innerWidth,window.innerHeight)
   </script>
 </body>
