--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <canvas id='canvas'></canvas>
   <script type="text/javascript" charset="utf-8" src="lib/jquery-1.11.1.min.js"></script>
+  <script src="lib/keymaster.js" type="text/javascript"></script>
   <script src="lib/utils.js" type="text/javascript"></script>
   <script src="lib/movingObject.js" type="text/javascript"></script>
   <script src="lib/asteroid.js" type="text/javascript"></script>
