--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <body>
   <canvas id='canvas'></canvas>
   <script type="text/javascript" charset="utf-8" src="lib/jquery-1.11.1.min.js"></script>
-  <script src="lib/keymaster.js" type="text/javascript"></script>
-  <script src="lib/utils.js" type="text/javascript"></script>
-  <script src="lib/movingObject.js" type="text/javascript"></script>
-  <script src="lib/asteroid.js" type="text/javascript"></script>
-  <script src="lib/ship.js" type="text/javascript"></script>
-  <script src="lib/game.js" type="text/javascript"></script>
-  <script src="lib/gameView.js" type="text/javascript"></script>
+  <script type="text/javascript" src="lib/keymaster.js" ></script>
+  <script type="text/javascript" src="lib/utils.js" ></script>
+  <script type="text/javascript" src="lib/movingObject.js" ></script>
+  <script type="text/javascript" src="lib/asteroid.js" ></script>
+  <script type="text/javascript" src="lib/ship.js" ></script>
+  <script type="text/javascript" src="lib/bullet.js" ></script>
+  <script type="text/javascript" src="lib/game.js" ></script>
+  <script type="text/javascript" src="lib/gameView.js" ></script>
   <script>
     $(function() {
       var canvas    = $('#canvas')[0];
