--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <canvas id='canvas'></canvas>
+  <canvas id='canvas' style="background-image:url(space.jpg);background-size:cover;"></canvas>
   <script type="text/javascript" charset="utf-8" src="lib/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="lib/keymaster.js" ></script>
   <script type="text/javascript" src="lib/utils.js" ></script>
